fixed ol spacing | v5.5.22

--- a/src/scss/_01magicgreen.scss
+++ b/src/scss/_01magicgreen.scss
@@ -366,7 +366,8 @@ footer {
     transform: rotateZ(3deg) !important;
   }
   p,
-  ul {
+  ul,
+  ol {
     font-size: 135%;
     max-width: 650px;
     margin: 0 0 0 auto;
